CSS: Fix body height
Removes fixed height for <body> -- this was causing strange scrollbar
behavior on the page on Webkit browsers.

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -48,7 +48,6 @@ div.toolbar,
 body {
   min-width: 1024px;
   font-family: sans-serif;
-  height: 769px !important;
   overflow: auto;
   background: #EDE8E8;
 }
